# typedi

./: .coveragerc  .gitignore  LICENCE  README.md  setup.cfg  setup.py  tox.ini  typedi.py  typedi_tests.py
.github/workflows/: python-build.yml  python-publish.yml
src/typedi/: __init__.py  container.py  object_proxy.py  resolution.py  typing_utils.py
tests/: test_container.py  test_object_proxy.py  test_pydantic.py  test_resolution.py  test_resolve_protocol.py  test_resolve_tuple.py  test_typing_utils.py
