[metadata]
name = typedi
version = attr: typedi.__version__
description = Simple yet powerful typed dependency injection container
url = https://github.com/bshishov/typedi
author = Boris Shishov
author_email = borisshishov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENCE
platform = any
keyword = dependency injection, di, ioc, container
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries

[options]
python_requires = >= 3.7
packages = find:
package_dir =
    =src
test_suite = tests
setup_requires =
    setuptools >=43.3.0
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest==7.1.2
    coverage==6.4.3

[options.package_data]
typedi = py.typed

# Tests and coverage configuration ---------------------------------------------

[coverage:run]
branch = true
relative_files = true
parallel = true
source =
    typedi

[coverage:paths]
src =
    src/
    .tox/*/lib/*/site-packages/
    .tox\*\Lib\site-packages\
    .tox/pypy*/site-packages/

[coverage:report]
fail_under = 90
skip_covered = true
show_missing = true
exclude_lines =
    @(abc\.)?abstractmethod
    if sys.version_info
    def __repr__

[tool:pytest]
norecursedirs = .tox venv

# Tox automation configuration ---------------------------------------------

[tox:tox]
envlist = py{37,38,39,310,311}

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
# for coverage to produce unified paths across all environments
usedevelop = true
deps =
  pytest==7.1.2
  coverage==6.4.3
commands =
  python -m coverage run --rcfile {toxinidir}/setup.cfg -m pytest -v {posargs}
